--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -41,7 +41,7 @@
 .content-container {
   display: flex;
   flex-direction: column-reverse;
-  gap: 3rem;
+  gap: 2vmin;
   max-width: 2000px;
   margin: 0 auto;
 }
